Update package.json with dependencies

--- a/package.json
+++ b/package.json
@@ -3,11 +3,8 @@
   "main": "./lib/youclid-atom",
   "version": "0.0.0",
   "description": "A short description of your package",
-  "keywords": [
-  ],
+  "keywords": [],
   "activationCommands": {
-    "atom-workspace": "youclid-atom:compile",
-    "atom-workspace": "youclid-atom:compile_and_open",
     "atom-workspace": "youclid-atom:mark"
   },
   "repository": "https://github.com/atom/youclid-atom",
@@ -16,5 +13,6 @@
     "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
+    "atom-html-preview": "harmsk/atom-html-preview"
   }
 }
